--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,14 +109,15 @@ commands:
               --zone=$(terraform output cluster_zone)
           when: always
       - run:
-          name: Copy static assets to GCS bucket
+          name: Copy static assets to GCS bucket, invalidate CDN cache
           command: |
             cd terraform/${ENV}
             export STATIC_ASSETS_HOST=$(terraform output static_assets_public_address)
             envsubst < ../../app/static/index.html > ../../app/static/index.html.filled
             mv ../../app/static/index.html.filled ../../app/static/index.html
             gsutil rm $(terraform output static_assets_bucket_url)/**
-            gsutil cp ../app/static/* $(terraform output static_assets_bucket_url)
+            gsutil cp ../../app/static/* $(terraform output static_assets_bucket_url)
+            gcloud compute url-maps invalidate-cdn-cache $(terraform output static_assets_urlmap_name) --path "/*" --async
 
 jobs:
   test:
