--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@ commands:
             export STATIC_ASSETS_HOST=$(terraform output static_assets_public_address)
             envsubst < ../../app/static/index.html > ../../app/static/index.html.filled
             mv ../../app/static/index.html.filled ../../app/static/index.html
-            echo '$(terraform output static_assets_bucket_url)/**'
+            echo $(terraform output static_assets_bucket_url)/**
             gsutil rm '$(terraform output static_assets_bucket_url)/**'
             gsutil cp ../../app/static/* $(terraform output static_assets_bucket_url)
             gcloud compute url-maps invalidate-cdn-cache $(terraform output static_assets_urlmap_name) --path "/*" --async
